# digital-RPG-sheet

./: .gitignore  CMakeLists.txt  Character.cpp  Character.h  README.md  handy_stuff.h  items.pd  vcpkg.json
char_creator/: CMakeLists.txt  char_creator.cpp  char_creator.fbp  char_creator.h  character.pd  load_template.cpp  load_template.h  load_window.fbp  main.cpp  save_template.cpp  save_template.h  save_window.fbp  ui_template.cpp  ui_template.h
updater/: CMakeLists.txt  Curl_Handler.cpp  Curl_Handler.h  Zip_Handler.cpp  Zip_Handler.h  github_api_interface.py  main.cpp
